# corpusparser

./: .gitignore  LICENSE  README.md  TODO.txt  pyproject.toml  sandbox.py  sandbox2.py  sandbox3.py  sandbox4.py  sandbox5.py  test.py  test_import_document.py
corpusparser/: __init__.py  corpus.py  corpus_element.py  document.py  sentence.py  word.py
src/: corpus_element.py  corpusparser.py  document.py  sentence.py  transformers.py  word.py
tests/: context.py  test_corpusparser.py
tests/data/: Aymon-parse.txt  Aymon-pos.txt  Aymon-sentences.txt  Aymon.xml  input.xml  output.xml  sandbox-output.xml  sandbox3-output.xml  sandbox5-output.txt  sents.txt  simple-input1.xml  simple-input2.xml  spellings.json  stage1.xml  word_frequency.txt
